--- a/qrfront/src/app/app.component.html
+++ b/qrfront/src/app/app.component.html
@@ -3,12 +3,12 @@
     <app-navbar></app-navbar>
   </header>
 
-  <body style="background-color: lightgoldenrodyellow;">
+  <body style="background-color: lightgoldenrodyellow">
     <div class="container">
       <router-outlet></router-outlet>
     </div>
   </body>
-  
+
   <footer>
     <app-footer></app-footer>
   </footer>
