--- a/qrfront/src/app/components/customer-num/customer-num.component.html
+++ b/qrfront/src/app/components/customer-num/customer-num.component.html
@@ -1,6 +1,22 @@
 <br />
-<div>
-  <table class="table table-bordered" >
+<div
+  style="
+    text-align: center;
+    vertical-align: top;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: rgb(255, 255, 227);
+  "
+>
+  <h2 class="page-header">
+    {{ name }}님 환영합니다! 현재 대기 상황은 다음과 같습니다.
+  </h2>
+  <h2 class="waitpeople">현재 대기자 수는 {{ customersQuantity }}명 입니다.</h2>
+  <h2 class="waitpeople">
+    예상 대기 시간은 {{ customersQuantity * 5 }}분 입니다.
+  </h2>
+  <table class="table table-bordered">
     <thead class="thead">
       <tr class="text-center bg-warning">
         <th scope="col">순번</th>
