--- a/qrfront/src/app/components/home/home.component.html
+++ b/qrfront/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
     <button
       *ngIf="!checkLoggedIn()"
       type="button"
-      class="btn btn-primary"
+      class="btn btn-warning"
       routerLink="/register"
     >
       회원가입
@@ -21,9 +21,7 @@
       *ngIf="!checkLoggedIn()"
       type="button"
       style="text-align: center; vertical-align: top"
-      class="btn btn-primary"
-      type="button"
-      class="btn btn-primary"
+      class="btn btn-warning"
       routerLink="/login"
     >
       로그인
@@ -45,32 +43,6 @@
   <h1 style="padding-top: 10px; padding-bottom: 10px">
     어서오세요! Qyaho 은행입니다.
   </h1>
-</div>
-<br />
-
-<div
-  *ngIf="checkLoggedIn()"
-  style="
-    text-align: center;
-    vertical-align: top;
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
-    background-color: rgb(255, 255, 227);
-  "
->
-  <div *ngIf="name">
-    <h2 class="page-header">
-      {{ name }}님 환영합니다! 현재 대기 상황은 다음과 같습니다.
-    </h2>
-    <h2 class="waitpeople">
-      현재 대기자 수는 {{ customersQuantity }}명 입니다.
-    </h2>
-    <h2 class="waitpeople">
-      예상 대기 시간은 {{ customersQuantity * 5 }}분 입니다.
-    </h2>
-    <app-customer-num></app-customer-num>
-  </div>
 </div>
 <br />
 <div
