--- a/qrfront/src/app/components/login/login.component.html
+++ b/qrfront/src/app/components/login/login.component.html
@@ -22,5 +22,5 @@
     />
   </div>
   <br />
-  <input type="submit" class="btn btn-primary" value="로그인" />
+  <input type="submit" class="btn btn-warning" value="로그인" />
 </form>
