--- a/qrfront/src/app/components/register/register.component.html
+++ b/qrfront/src/app/components/register/register.component.html
@@ -42,5 +42,5 @@
     />
   </div>
   <br />
-  <input type="submit" class="btn btn-primary" value="회원가입" />
+  <input type="submit" class="btn btn-warning" value="회원가입" />
 </form>
