--- a/qrfront/src/app/components/navbar/navbar.component.html
+++ b/qrfront/src/app/components/navbar/navbar.component.html
@@ -35,6 +35,10 @@
 
         <ul class="navbar-nav mr-auto">
           <li *ngIf="checkLoggedIn()" class="nav-item">
+            <a class="nav-link" routerLink="/picslide">대기 등록 방법</a>
+          </li>
+
+          <li *ngIf="checkLoggedIn()" class="nav-item">
             <a class="nav-link" routerLink="/qrgen">대기 순번 QR코드</a>
           </li>
 
