--- a/qrfront/src/app/components/home/home.component.html
+++ b/qrfront/src/app/components/home/home.component.html
@@ -45,14 +45,29 @@
   </h1>
 </div>
 <br />
+
 <div
   *ngIf="checkLoggedIn()"
   style="
     text-align: center;
     vertical-align: top;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 10px;
+    background-color: rgb(255, 255, 227);
   "
 >
-  <app-pic-slide></app-pic-slide>
+  <div *ngIf="name">
+    <h2 class="page-header">
+      {{ name }}님 환영합니다! 현재 대기 상황은 다음과 같습니다.
+    </h2>
+    <h2 class="waitpeople">
+      현재 대기자 수는 {{ customersQuantity }}명 입니다.
+    </h2>
+    <h2 class="waitpeople">
+      예상 대기 시간은 {{ customersQuantity * 5 }}분 입니다.
+    </h2>
+    <app-customer-num></app-customer-num>
+  </div>
 </div>
+<br />
