--- a/qrfront/src/app/components/pic-slide/pic-slide.component.html
+++ b/qrfront/src/app/components/pic-slide/pic-slide.component.html
@@ -1,10 +1,21 @@
-<div class="container">
+<br />
+<div class="container" style="text-align: center">
   <owl-carousel [options]="homeSlider" [carouselClasses]="['owl-theme']">
     <div class="item">
-      <img src="../../../assets/images/enha.jpg" />
+      <img src="../../../assets/images/img18.png" />
+      <br />
+      <h1>Qyaho 은행</h1>
     </div>
     <div class="item">
-      <img src="../../../assets/images/home.jpg" />
+      <img src="../../../assets/images/img16.png" />
+      <br />
+      <h1>Qyaho 은행</h1>
+    </div>
+    <div class="item">
+      <img src="../../../assets/images/img16.png" />
+      <br />
+      <h1>Qyaho 은행</h1>
     </div>
   </owl-carousel>
 </div>
+<br />
