--- a/qrfront/src/app/components/customer-num/customer-num.component.html
+++ b/qrfront/src/app/components/customer-num/customer-num.component.html
@@ -9,9 +9,9 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let customer of customers; let i = index">
+      <tr *ngFor="let customer of customers;">
         <td class="text-center" style="width: 20%">
-          <h5>{{ i + 1 }}</h5>
+          <h5>{{ customers.no }}</h5>
         </td>
         <td class="text-center" style="width: 40%">
           <h5>{{ customer.name }}</h5>
