--- a/qrfront/src/app/components/customer-num/customer-num.component.html
+++ b/qrfront/src/app/components/customer-num/customer-num.component.html
@@ -11,7 +11,7 @@
     <tbody>
       <tr *ngFor="let customer of customers;">
         <td class="text-center" style="width: 20%">
-          <h5>{{ customers.no }}</h5>
+          <h5>{{ customer.no }}</h5>
         </td>
         <td class="text-center" style="width: 40%">
           <h5>{{ customer.name }}</h5>
