--- a/qrfront/src/app/components/pic-slide/pic-slide.component.html
+++ b/qrfront/src/app/components/pic-slide/pic-slide.component.html
@@ -2,19 +2,32 @@
 <div class="container" style="text-align: center">
   <owl-carousel [options]="homeSlider" [carouselClasses]="['owl-theme']">
     <div class="item">
-      <img src="../../../assets/images/img18.png" />
       <br />
-      <h1>Qyaho 은행</h1>
+      <h1>1. QR코드 생성</h1>
+      <h1>대기 순번 QR코드 페이지로 이동하거나 QR코드 재발급 버튼 클릭</h1>
+      <br />
+      <img src="../../../assets/images/example.png" />
     </div>
     <div class="item">
-      <img src="../../../assets/images/img16.png" />
       <br />
-      <h1>Qyaho 은행</h1>
+      <h1>2. 대기 등록 시</h1>
+      <h1>생성된 QR코드를 비치된 대기 등록 스캐너를 통해 스캔</h1>
+      <br />
+      <img src="../../../assets/images/example1.png" />
     </div>
     <div class="item">
-      <img src="../../../assets/images/img16.png" />
       <br />
-      <h1>Qyaho 은행</h1>
+      <h1>3. 대기 등록 후 등록 취소를 원할 시</h1>
+      <h1>다시 QR코드를 생성하여 대기 등록 스캐너에 스캔</h1>
+      <br />
+      <img src="../../../assets/images/example2.png" />
+    </div>
+    <div class="item">
+      <br />
+      <h1>4. 대기 순번 차례 시</h1>
+      <h1>QR코드를 생성하여 대기 서비스 제공 스캐너에 스캔</h1>
+      <br />
+      <img src="../../../assets/images/example3.png" />
     </div>
   </owl-carousel>
 </div>
