--- a/qrfront/src/app/components/navbar/navbar.component.html
+++ b/qrfront/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
 
         <ul class="navbar-nav mr-auto">
           <li *ngIf="checkLoggedIn()" class="nav-item">
-            <a class="nav-link" routerLink="/picslide">대기 등록 방법</a>
+            <a class="nav-link" routerLink="/picslide">대기 등록 메뉴얼</a>
           </li>
 
           <li *ngIf="checkLoggedIn()" class="nav-item">
